--- a/index.html
+++ b/index.html
@@ -68,9 +68,12 @@
 
         <div class="rocketImg">
             <img src="./rocket.png" width="200px"/>
+            <div class="smokenFire">
+                <img width="170px"/>
+            </div>
         </div>
         <div class="circleOverlay"></div>
-        <h4 class="timerH4">T+ 00:00:00:000</h4>
+        <h4 class="timerH4">T+ 00 : 00 : 000</h4>
 	</div>
 </body>
 <script src="index.js"></script>
