--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <div class="draw-container">
+        <div class="verticalClouds">
+
+        </div>
+
         <div id="background-wrap">
             <div class="x1">
                 <div class="cloud"></div>
