--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="draw-container">
-        <div class="verticalClouds">
-
-        </div>
+            <div class="y1">
+                <div class="cloud"></div>
+            </div>
 
         <div id="background-wrap">
             <div class="x1">
